// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import event job should build the correct query string 1`] = `
"SELECT
	l.LOAD_ID,
	l.DATE_CREATED AS booked_date,
	lst.DESCRIPTION AS LOAD_STATUS,
	o.name AS customer_name,
	lcd.TOTAL_REVENUE,
	lcd.TOTAL_COSTS,
	lcd.TOTAL_REVENUE - lcd.TOTAL_COSTS AS margin,
	(
		SELECT
			min(l2.date_created)
		FROM
			flatbed.loads l2
		WHERE
			l2.ORG_ID = o.ORG_ID
	) AS first_load_date,
	(
		SELECT
			min(l2.SHIP_DATE)
		FROM
			flatbed.loads l2
		WHERE
			l2.ORG_ID = o.ORG_ID
	) AS first_ship_date, l.CONTAINER_CD AS container_type
	FROM
		flatbed.loads l
		JOIN flatbed.organizations o ON o.ORG_ID = l.ORG_ID
			AND l.ORIGINATING_SYSTEM = 'GS'
			AND l.LOAD_STATUS != 'C'
		JOIN flatbed.LOAD_STATUS_TYPES lst ON lst.LOAD_STATUS = l.LOAD_STATUS
		JOIN rater.load_cost_details lcd ON lcd.load_id = l.load_id
			AND lcd.STATUS = 'A'
	WHERE
		trunc(l.DATE_CREATED) <= '31-May-2021' AND l.load_id > 14328660"
`;

exports[`import event job should build the correct query string 2`] = `
"SELECT
	l.LOAD_ID,
	l.DATE_CREATED AS booked_date,
	lst.DESCRIPTION AS LOAD_STATUS,
	o.name AS customer_name,
	lcd.TOTAL_REVENUE,
	lcd.TOTAL_COSTS,
	lcd.TOTAL_REVENUE - lcd.TOTAL_COSTS AS margin,
	(
		SELECT
			min(l2.date_created)
		FROM
			flatbed.loads l2
		WHERE
			l2.ORG_ID = o.ORG_ID
	) AS first_load_date,
	(
		SELECT
			min(l2.SHIP_DATE)
		FROM
			flatbed.loads l2
		WHERE
			l2.ORG_ID = o.ORG_ID
	) AS first_ship_date, l.CONTAINER_CD AS container_type
	FROM
		flatbed.loads l
		JOIN flatbed.organizations o ON o.ORG_ID = l.ORG_ID
			AND l.ORIGINATING_SYSTEM = 'GS'
			AND l.LOAD_STATUS != 'C'
		JOIN flatbed.LOAD_STATUS_TYPES lst ON lst.LOAD_STATUS = l.LOAD_STATUS
		JOIN rater.load_cost_details lcd ON lcd.load_id = l.load_id
			AND lcd.STATUS = 'A'
	WHERE
		trunc(l.DATE_CREATED) <= '31-May-2021' AND trunc(l.DATE_CREATED) > '01-01-2021'"
`;

exports[`import event job should build the correct query string 3`] = `
"SELECT
	l.LOAD_ID,
	l.DATE_CREATED AS booked_date,
	lst.DESCRIPTION AS LOAD_STATUS,
	o.name AS customer_name,
	lcd.TOTAL_REVENUE,
	lcd.TOTAL_COSTS,
	lcd.TOTAL_REVENUE - lcd.TOTAL_COSTS AS margin,
	(
		SELECT
			min(l2.date_created)
		FROM
			flatbed.loads l2
		WHERE
			l2.ORG_ID = o.ORG_ID
	) AS first_load_date,
	(
		SELECT
			min(l2.SHIP_DATE)
		FROM
			flatbed.loads l2
		WHERE
			l2.ORG_ID = o.ORG_ID
	) AS first_ship_date, l.CONTAINER_CD AS container_type
	FROM
		flatbed.loads l
		JOIN flatbed.organizations o ON o.ORG_ID = l.ORG_ID
			AND l.ORIGINATING_SYSTEM = 'GS'
			AND l.LOAD_STATUS != 'C'
		JOIN flatbed.LOAD_STATUS_TYPES lst ON lst.LOAD_STATUS = l.LOAD_STATUS
		JOIN rater.load_cost_details lcd ON lcd.load_id = l.load_id
			AND lcd.STATUS = 'A'
	WHERE
		trunc(l.DATE_CREATED) <= '31-May-2021'"
`;
